[COLAB-1145] Fixed alignment for multi-line ontology terms

--- a/themes/climatecolab-theme/src/main/webapp/css/scss/pages/_p-ContestProposals.scss
+++ b/themes/climatecolab-theme/src/main/webapp/css/scss/pages/_p-ContestProposals.scss
@@ -162,6 +162,7 @@ $p-Contests__contestDetail__heading__background: url(../images/pattern-6x6-lite.
 
 .p-ContestProposals__header__ontology__term {
   display: $p-ContestProposals__header__ontology__display;
+  vertical-align: top;
   margin-right: 15px;
   width: 220px;
 }
